[package]
name = "why"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
